Added screenshots for Onboarding functions section and changed an OnboardingSectionView layout a little bit

--- a/ReEnabled/Localization/en.lproj/Localizable.strings
+++ b/ReEnabled/Localization/en.lproj/Localizable.strings
@@ -175,6 +175,8 @@ Thanks to this, you'll learn all the available gestures on every screen of the a
 Moreover, you can learn the remaining available voice commands on the screen by performing the same action but issuing a voice command:
 
 „Remind voice commands.”
+
+Swipe left to continue.
 ";
 
 "descriptionFeedbackFirstTutorial" = "
